sbi-manifests/sbi-cms-issuance-ui-app/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-issuance-ui-app
  namespace: sbi
  labels:
    app: sbi-cms-issuance-ui-app
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-issuance-ui-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-issuance-ui-app
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 907ea9196e9634418763ede68a088f42d829453db7c41ede2c3df2a92faf9634
    spec:
      volumes:
      containers:
        - name: sbi-cms-issuance-ui-app
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-issuance-ui-app:sbi-uat.v374
          volumeMounts:
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
