sbi-manifests/sbi-cms-issuance-ui-app/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-issuance-ui-app
  namespace: sbi
  labels:
    app: sbi-cms-issuance-ui-app
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080-8080'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: 80-80
  selector:
    app: sbi-cms-issuance-ui-app
  type: ClusterIP
